--- a/technical/obis-eez-metric.Rmd
+++ b/technical/obis-eez-metric.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "ROI EBSA"
+title: "OBIS Metric by EEZ"
 output:
   html_document:
     toc: true
@@ -24,7 +24,7 @@ Workflow:
       - proportion of obs in/out
       - filter by RedList, eg more in vs out: ratio for spp > LC (least concern)
           - drill down by # years obs & recent? **advise on future monitoring**
-          - mgt msg: overlay obs grid w/ hi chl 
+          - mgt msg: overlay obs grid w/ hi chl
     - compare w/ hi chl / upwelling areas / unique seascapes
     - TODO: show ecosystem/habitats + cumulative impacts
 
@@ -42,6 +42,7 @@ Workflow:
 ```{r setup, warning=F, message=F}
 knitr::opts_chunk$set(echo=T, message=F, warning=F)
 library(tidyverse)
+library(stringr)
 library(sf)
 library(geosphere)
 library(mapview)
@@ -49,6 +50,7 @@ library(robis)  # devtools::install_github('iobis/robis')
 library(robis2) # devtools::install_github('iobis/robis2')
 library(rmapshaper)
 library(geojsonio)
+library(rgeos)
 library(scales)
 library(DT)
 library(leaflet)
@@ -74,63 +76,8 @@ wdpa_eez_geo     = sprintf('cache/%s_wdpa_eez.geojson', roi)
 occ_eez_wdpa_csv = sprintf('cache/%s_occ_eez_wdpa.csv', roi)
 
 if (!dir.exists('cache')) dir.create('cache')
-```
 
-## Fetch EEZs
-
-Get the exclusive economic zones (EEZs) within the ROI region of interest to get at areas of political interest and management.
-
-Fetch the entire EEZ dataset (takes ~ 2 min by hitting the MarineRegions.org WFS server at VLIZ.be) and subset based on intersecting EEZs.
-
-```{r fetch all EEZs via WFS}
-if (!file.exists(eez_all_rdata)){
-  eez_url = 'http://geo.vliz.be/geoserver/MarineRegions/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=MarineRegions:eez'
-  eez_all = read_sf(eez_url)           # 2.2 min
-
-  # make geometries valid
-  if (!is.na(sf_extSoftVersion()["lwgeom"])) {
-    suppressWarnings(st_is_valid(eez_all))
-    eez_all = st_make_valid(eez_all)
-    st_is_valid(eez_all)
-    eez_all = eez_all %>% st_cast()
-  }  
-  
-  saveRDS(eez_all, file=eez_all_rdata) # store compressed
-}
-eez_all = readRDS(eez_all_rdata)
-
-# show table without geom
-eez_all %>%
-  st_set_geometry(NULL)
-```
-
-## Generalize EEZ for Querying OBIS
-
-In order to query OBIS and other web services, well known text (WKT) is needed which when passed through a URL has a limited number of characters to pass. To reduce this size, buffer by 0.1 decimal degrees and simplify the polygon (by 95%).
-
-```{r generalize roi, message=F}
-if (!file.exists(eez_smp_rdata)){
-
-  eez_smp = eez_all %>%
-    st_buffer(dist=0) %>%
-    geojson_json() %>%
-    ms_simplify() %>%
-    geojson_sp() %>%
-    st_as_sf()
-
-  saveRDS(eez_smp, file=eez_smp_rdata) # store compressed
-}  
-eez_smp = readRDS(eez_smp_rdata)
-
-```
-The WKT representation got reduced from `r nchar(roi0_wkt) %>% comma()` to `r nchar(roi_wkt) %>% comma()` characters.
-
-## Fetch OBIS occurrences
-
-Fetch OBIS records using the newer [iobis/robis2](https://github.com/iobis/robis2) package that retrieves records really fast using ElasticSearch.
-
-```{r fetch obis tbl for roi poly}
-cols_drop = c(
+obis_cols_drop = c(
   'acceptedNameUsage','acceptedNameUsageID','accessRights','associatedMedia','associatedReferences','associatedSequences','associatedTaxa',
   'basisOfRecord','behavior','bibliographicCitation',
   'collectionID','continent','coordinatePrecision','coordinateUncertaintyInMeters','countryCode','county',
@@ -148,50 +95,136 @@ cols_drop = c(
   'parvorder',
   'section',
   'recordNumber','recordedBy','references','reproductiveCondition','rights','rightsHolder',
-  'scientificNameAuthorship','sex','source',
+  'scientificNameAuthorship','scientificNameID','sex','source',
   'stateProvince','subclass','subdivision','subfamily','subforma','subgenus','subkingdom','suborder',
   'subphylum','subsection','subspecies','subterclass','subtribe','subvariety',
   'superclass','superfamily','superorder','supertribe',
-  'taxonConceptID','taxonID','taxonRank','taxonRemarks','taxonomicStatus',
+  'taxonConceptID','taxonRemarks','taxonomicStatus',
   'tribe','type','typeStatus',
   'variety','vernacularName',
   'waterBody',
   'phylum','class','order','family','genus','species') # covered by checklist
-
-if (any(!file.exists(occ_txt), !file.exists(occ_csv))){
-  occ_tbl = robis2::occurrence(geometry=roi_wkt) %>% 
-    as_tibble()
-  occ_tbl = occ_tbl %>%
-    select_(.dots = setdiff(names(occ_tbl), cols_drop))
-  
-  write_lines(nrow(occ_tbl), occ_txt)
-  write_csv(occ_tbl, occ_csv)
-}
-occ_tbl  = read_csv(occ_csv)
-occ_nwkt = read_lines(occ_txt) %>% as.integer()
-
-occ_tbl %>%
-  head()
 ```
 
-Above are the first 6 of `r occ_nwkt %>% comma()` records from the generalized WKT.
+## Fetch EEZs
 
-## Fetch Taxonomic Information with IUCN Redlist
+Get the exclusive economic zones (EEZs) within the ROI region of interest to get at areas of political interest and management.
 
-```{r get obis checklist for roi}
-if (!file.exists(occ_cklist_csv)){
-  occ_cklist = robis::checklist(geometry=roi_wkt) # 1.6 min  
-  
-  # get unique taxonomic name (tname), prioritizing beyond with first non-NA of: valid, worms_id, redlist, status, phylum,...
-  occ_cklist = occ_cklist %>%
+Fetch the entire EEZ dataset (takes ~ 2 min by hitting the MarineRegions.org WFS server at VLIZ.be) and subset based on intersecting EEZs.
+
+```{r fetch-eezs}
+if (!file.exists(eez_all_rdata)){
+  eez_url = 'http://geo.vliz.be/geoserver/MarineRegions/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=MarineRegions:eez'
+  eez_all = read_sf(eez_url)           # 2.2 min
+
+  # make geometries valid
+  if (!is.na(sf_extSoftVersion()["lwgeom"])) {
+    suppressWarnings(st_is_valid(eez_all))
+    eez_all = st_make_valid(eez_all)
+    st_is_valid(eez_all)
+    eez_all = eez_all %>% st_cast()
+  }  
+
+  saveRDS(eez_all, file=eez_all_rdata) # store compressed
+}
+eez_all = readRDS(eez_all_rdata) %>%
+    st_set_crs(4326)
+
+# show table without geom
+eez_all %>%
+  st_set_geometry(NULL)
+```
+
+## Simplify EEZ for Plotting and OBIS Querying
+
+In order to query OBIS and other web services, well known text (WKT) is needed which when passed through a URL has a limited number of characters to pass. To reduce this size, buffer by 0.1 decimal degrees and simplify the polygon (by 95%).
+
+```{r simplify-eezs, message=F}
+if (!file.exists(eez_smp_rdata)){
+
+  eez_smp = eez_all %>%
+    geojson_json() %>%
+    ms_simplify() %>%
+    geojson_sp() %>%
+    st_as_sf()
+
+  saveRDS(eez_smp, file=eez_smp_rdata) # store compressed
+}  
+eez_smp = readRDS(eez_smp_rdata)
+
+leaflet(eez_smp) %>%
+   addTiles() %>%
+   addPolygons()
+```
+
+## Fetch OBIS occurrences
+
+Fetch OBIS records using the newer [iobis/robis2](https://github.com/iobis/robis2) package that retrieves records really fast using ElasticSearch.
+
+```{r fetch-obis-by-eez}
+ter = 'Galapagos' # sort(eez_smp$territory1)
+ter_f = str_replace_all(ter, ' ', '_')
+
+wkt_txt  = sprintf('cache/eez-%s_wkt.txt', ter_f)
+obis_geo = sprintf('cache/eez-%s_obis.geojson', ter_f)
+obis_csv = sprintf('cache/eez-%s_obis.csv', ter_f)
+
+if (any(!file.exists(wkt_txt))){
+  wkt = eez_smp %>%
+    filter(territory1==ter) %>%
+    st_buffer(dist=0.1) %>%
+    st_geometry() %>%
+    st_as_text()
+
+  # simplify well-known text to size passable via URL for OBIS querying
+  while (nchar(wkt) > 2048){
+    wkt = readWKT(wkt) %>%
+      geojson_json() %>%
+      ms_simplify() %>%
+      geojson_sp() %>%
+      st_as_sf() %>%
+      st_geometry() %>%
+      st_as_text()
+  }
+
+  write_lines(wkt, wkt_txt)
+}
+wkt = readLines(wkt_txt)
+
+if (any(!file.exists(obis_geo), !file.exists(obis_csv))){
+  # fetch OBIS occurrences
+  obis_tbl = robis2::occurrence(geometry=wkt) %>%
+    as_tibble() %>%
+    rename(
+      occurrence_id = id) %>%
+    select(
+     kingdom, taxonomicgroup, scientificName, year, occurrence_id,
+     eventDate, decimalLongitude, decimalLatitude, depth,
+     taxonRank, worms_id, valid_id, originalscientificname,
+     resource_id, catalogNumber, institutionCode, collectionCode,
+     qc) %>%
+    arrange(kingdom, taxonomicgroup, scientificName, year, occurrence_id) # View(obis_tbl)
+
+  # drop unneeded OBIS columns: moot with select() above, retained for explicitness of dropped columns to revisit
+  obis_tbl = obis_tbl %>%
+    select_(.dots = setdiff(names(obis_tbl), obis_cols_drop))
+
+  # fetch OBIS checklist for redlist status and taxonomic info
+  cklist = robis::checklist(geometry=wkt) # cklist_0 = cklist # View(cklist_0)
+  # get unique taxonomic name (tname), prioritizing with first non-NA of:
+  #  valid, worms_id, redlist, status, phylum,...
+  cklist = cklist %>%
+    rename(
+      scientificName = tname) %>%
     mutate(
       invalid = valid_id != id) %>%
-    arrange(tname,invalid,worms_id,redlist,status,phylum,class,order,family,genus,species) %>%
-    group_by(tname) %>%
+    arrange(scientificName,invalid,worms_id,redlist,status,phylum,class,order,family,genus,species) %>% # View(cklist)
+    group_by(scientificName) %>%
     summarize(
-      worms_id     = first(worms_id),
       checklist_id = first(id),
-      valid_id     = first(parent_id),
+      worms_id     = first(worms_id),
+      valid_id     = first(valid_id),
+      parent_id    = first(parent_id),
       rank_name    = first(rank_name),
       tauthor      = first(tauthor),
       phylum       = first(phylum),
@@ -201,90 +234,80 @@ if (!file.exists(occ_cklist_csv)){
       genus        = first(genus),
       species      = first(species),
       redlist      = first(redlist),
-      status       = first(status),
-      wktpoly_sum_records  = sum(records),
-      wktpoly_sum_datasets = sum(datasets))
-  
-  write_csv(occ_cklist, occ_cklist_csv)
-}
-occ_cklist = read_csv(occ_cklist_csv)
-```
+      status       = first(status)) %>%
+    mutate(
+      invalid = valid_id != checklist_id) %>%
+    arrange(invalid,scientificName,worms_id,redlist,status,phylum,class,order,family,genus,species)
+  obis_tbl = obis_tbl %>%
+    left_join(
+      cklist %>%
+        select(-scientificName, -valid_id), # already in obis_tbl
+      by='worms_id')
 
-```{r occ_cklist debug, eval=F}
-occ_head = head(occ_tbl)
-View(occ_head)
-table(occ_tbl$taxonomicgroup, useNA='ifany') # 0 NAs
-# occ_tbl$taxonomicgroup YES!
+  # turn table into points
+  obis_sf = obis_tbl %>%
+    st_as_sf(
+      coords = c('decimalLongitude','decimalLatitude'),
+      crs=4326, agr='constant')
 
-sum(duplicated(occ_cklist$id)) # 0
-sum(duplicated(occ_cklist$worms_id)) # 154
-sum(duplicated(occ_cklist$tname[duplicated(occ_cklist$tname)])) # 0
+  # rm points outside original unsimplified, unbuffered eez
+  eez = eez_all %>%
+    filter(territory1==ter)
+  obis_sf = obis_sf %>%
+    slice(
+      st_intersects(
+        eez,
+        obis_sf)[[1]])
 
-occ_cklist_worms_dupes = occ_cklist %>% 
-  filter(
-    worms_id %in% occ_cklist$worms_id[duplicated(occ_cklist$worms_id)] |
-    tname %in% occ_cklist$tname[duplicated(occ_cklist$tname)]) %>%
-  arrange(worms_id)
-View(occ_cklist_worms_dupes)
-```
+  # write obis_geo with just id to save disk space, for later rejoining with obis_tbl
+  if (sum(duplicated(obis_tbl$occurrence_id)) > 0) stop('Whoah! Expecting all unique ids in OBIS occurrence table.')
+  obis_sf %>%
+    select(occurrence_id) %>%
+    write_sf(obis_geo, delete_dsn=T)
 
-## Convert OBIS occcurrences to points and filter
-
-Next, convert the table having decimalLongitude and decimalLatitude into points and filter out points that were in the generalized WKT but not the original ROI polygon.
-
-```{r convert obis tbl to pts within roi poly, message=F}
-if (!file.exists(occ_geo)){
-  occ_tbl = read_csv(occ_csv)
-
-  # turn obis into sf
-  occ_sf = st_sf(
-    occ_tbl, 
-    geometry = st_sfc(
-      with(
-        occ_tbl, 
-        map2(decimalLongitude, decimalLatitude, function(x, y) st_point(c(x, y)))))) %>%
-    st_set_crs(4326)
-  
-  # rm obis outside original roi: 137,277 -> 64,342
-  occ_sf = occ_sf %>%
-    slice(st_intersects(roi_sf, occ_sf)[[1]])
-
-  # write filtered csv
-  occ_sf %>%
+  # write obis_tbl to csv
+  obis_sf %>%
     st_set_geometry(NULL) %>%
-    write_csv(occ_csv)
-  
-  # write geo with just id to save disk space, for later rejoining with occ_tbl
-  if (sum(duplicated(occ_tbl$id)) > 0) stop('Whoah! Expecting unique id in OBIS occ_tbl.')
-  occ_sf %>% 
-    select(id) %>%
-    write_sf(occ_geo, delete_dsn=T)
+    write_csv(obis_csv)
 }
-occ_tbl = read_csv(occ_csv)
-occ_sf  = read_sf(occ_geo) %>%
-  left_join(
-    occ_tbl, by='id')
 
-leaflet(occ_sf) %>% 
+# read OBIS occurrences and join attributes
+obis_sf = read_sf(obis_geo) %>%
+  left_join(
+    read_csv(obis_csv),
+    by='occurrence_id')
+
+leaflet(obis_sf) %>%
   addProviderTiles(providers$Stamen.TonerLite) %>%
   addPolygons(
-    data = roi_sf) %>%
+    data = eez_smp %>%
+    filter(territory1==ter)) %>%
   addMarkers(
     clusterOptions = markerClusterOptions())
+
+obis_sf %>%
+  st_set_geometry(NULL) %>%
+  head()
 ```
 
-Above are the OBIS occurrence points, filtered to the original ROI polygon (`r occ_nwkt %>% comma()` to `r nrow(occ_sf) %>% comma()` records). Click on the marker cluster to zoom and explode into finer clusters and eventually individual points.
-
+Above are the first 6 of `r nrow(obis_sf) %>% comma()` OBIS attributes.
 
 ## Fetch MPAs in ROI
 
 We can use the [Protected Planet](https://www.protectedplanet.net/) [ESRI Web Service Query](http://ec2-54-204-216-109.compute-1.amazonaws.com:6080/arcgis/rest/services/wdpa/wdpa/MapServer/1/query) to construct an [ESRI Query (Operation)](https://resources.arcgis.com/en/help/rest/apiref/query.html) on the bounding box of the ROI region. This could be limited to the [fields](http://ec2-54-204-216-109.compute-1.amazonaws.com:6080/arcgis/rest/services/wdpa/wdpa/MapServer/1) available.
 
+Or directly download: https://www.protectedplanet.net/downloads/WDPA_Sep2017?type=shapefile
+
 ```{r fetch wdpa within roi, message=F}
-q_url = 'http://ec2-54-204-216-109.compute-1.amazonaws.com:6080/arcgis/rest/services/wdpa/wdpa/MapServer/1/query'
-bb = st_bbox(roi_sf)
+wdpa_geo = sprintf('cache/eez-%s_wdpa.geojson', ter_f)
+
+eez_sf = eez_all %>%
+  filter(territory1==ter)
 
 if (!file.exists(wdpa_geo)){
+  bb = st_bbox(eez_sf)
+
+  q_url = 'http://ec2-54-204-216-109.compute-1.amazonaws.com:6080/arcgis/rest/services/wdpa/wdpa/MapServer/1/query'
   res = httr::GET(q_url, query = list(
     f            = 'json',
     geometry     = sprintf('%0.1f,%0.1f,%0.1f,%0.1f', bb[['xmin']], bb[['ymin']], bb[['xmax']], bb[['ymax']]),
@@ -292,27 +315,33 @@ if (!file.exists(wdpa_geo)){
     inSR         = 4326,
     outSR        = 4326,
     outFields    = '*'))
-  
+
   wdpa_sf = httr::content(res) %>%
     read_sf() # wdpa0_sf = wdpa_sf; mapview(wdpa0_sf)
-  
+
   if (nrow(wdpa_sf) == 0){
     warning('no wdpa')
     write_sf(wdpa_sf, wdpa_geo, delete_dsn=T)
   } else {
-    
-    # filter by eez's within roi
+
+    # filter by eez's within eez
     wdpa_sf = wdpa_sf %>%
-      slice(st_intersects(roi_sf, wdpa_sf)[[1]])
-    wdpa_sf = wdpa_sf %>%
-      mutate(
-        area_wdpaall_km2 = st_area(st_geometry(wdpa_sf)))
-    wdpa_sf = wdpa_sf %>%
-      st_intersection(roi_sf %>% select())
+      slice(st_intersects(eez_sf, wdpa_sf)[[1]])
+
+    # calculate original area before extracting to eez
     wdpa_sf = wdpa_sf %>%
       mutate(
-        area_wdparoi_km2 = st_area(st_geometry(wdpa_sf)))
-  
+        area_wdpa_orig_km2 = st_area(st_geometry(wdpa_sf)))
+
+    # extract intersection with eez
+    wdpa_sf = wdpa_sf %>%
+      st_intersection(eez_sf %>% select())
+
+    # calculate area after extracting to eez
+    wdpa_sf = wdpa_sf %>%
+      mutate(
+        area_wdpa_eez_km2 = st_area(st_geometry(wdpa_sf)))
+
     write_sf(wdpa_sf, wdpa_geo, delete_dsn=T)
   }
 }
@@ -326,8 +355,8 @@ if (nrow(wdpa_sf) == 0){
     sprintf(
     "<strong>%s</strong><br/>DESIG_ENG: %s<br/>DESIG_TYPE: %s<br/>IUCN CAT: %s<br/>GIS_M_AREA: %s",
     NAME, DESIG_ENG, DESIG_TYPE, IUCN_CAT, comma(round(GIS_M_AREA,2)))) %>% lapply(HTML)
-  
-  leaflet(roi_sf) %>%
+
+  leaflet(eez_sf) %>%
     addProviderTiles(providers$Stamen.TonerLite) %>%
     addPolygons() %>%
     addPolygons(
@@ -342,110 +371,97 @@ if (nrow(wdpa_sf) == 0){
 }
 ```
 
-## MPAs in EEZs
-
-```{r}
-if (!file.exists(wdpa_eez_geo)){
-  wdpa_eez_sf = wdpa_sf %>%
-    st_intersection(eez_sf)
-  
-  write_sf(wdpa_eez_sf, wdpa_eez_geo, delete_dsn=T)
-}
-wdpa_eez_sf = read_sf(wdpa_eez_geo)
-
-labels = with(
-  wdpa_eez_sf,
-  sprintf(
-  "<strong>%s</strong> in <strong>%s - %s</strong><br/>DESIG_ENG: %s<br/>DESIG_TYPE: %s<br/>IUCN CAT: %s<br/>GIS_M_AREA: %s",
-  NAME, sovereign1, territory1, DESIG_ENG, DESIG_TYPE, IUCN_CAT, comma(round(GIS_M_AREA,2)))) %>% lapply(HTML)
-
-wdpa_eez_sf$sovereign1 = factor(wdpa_eez_sf$sovereign1)
-pal = colorFactor('Spectral', wdpa_eez_sf$sovereign1)
-
-leaflet(roi_sf) %>%
-  addProviderTiles(providers$Stamen.TonerLite) %>%
-  addPolygons(
-    weight = 0.5,
-    opacity = 0.2) %>%
-  addPolygons(
-    data = wdpa_eez_sf,
-    weight = 1,
-    fillColor = ~pal(sovereign1), # color = ~pal(sovereign1), 
-    label = labels,
-    highlight = highlightOptions(
-      color = 'yellow',
-      weight = 5,
-      bringToFront = T))
-```
-
-
 ## Spatial Join EEZ & WDPA to OBIS occurrences
 
 Spatially identify the EEZ and WDPA for each OBIS occurrence.
 
 ```{r obis by eez & wdpa}
-if (!file.exists(occ_eez_wdpa_csv)){
-  o_sf = occ_sf %>%
-    select(occ_id=id) %>%
-    st_join(
-      eez_sf %>% 
-        select(eez_gml_id=gml_id)) %>%
-    st_join(
-      wdpa_sf %>% 
-        select(wdpa_pid = WDPA_PID)) # 4.9 min
+obis_wdpa_csv = sprintf('cache/eez-%s_obis_wdpa.csv', ter_f)
+
+if (!file.exists(obis_wdpa_csv)){
   
+  # join fields with prefix identifying source
+  o_sf = obis_sf %>%
+    select(occurrence_id) %>%
+    st_join(
+      wdpa_sf %>%
+        select(WDPA_PID))
+  # NOTE: multiple MPAs can occur at a single OBIS occurrence point
+
+  # TODO: continue...
   o_sf %>%
     st_set_geometry(NULL) %>%
-    write_csv(occ_eez_wdpa_csv)
+    write_csv(obis_wdpa_csv)
 }
-occ_eez_wdpa = read_csv(occ_eez_wdpa_csv)
+obis_wdpa = read_csv(obis_wdpa_csv)
 
-occ_eez_wdpa %>%
+obis_wdpa %>%
   head()
 ```
 
-## Summarize OBIS by EEZ, WDPA, IUCN
+## Summarize OBIS by WDPA, IUCN
 
 ```{r}
-o = occ_tbl %>% 
-  left_join(
-    occ_cklist, 
-    by=c('scientificName'='tname')) %>%
-  left_join(
-    occ_eez_wdpa, 
-    by=c('id'='occ_id')) %>%
-  left_join(
-    eez_sf %>%
-      st_set_geometry(NULL), 
-    by=c('eez_gml_id'='gml_id')) %>%
-  left_join(
-    wdpa_sf %>%
-      mutate(WDPA_PID = as.integer(WDPA_PID)) %>%
-      st_set_geometry(NULL), 
-    by=c('wdpa_pid'='WDPA_PID'))
+# summarize by single OBIS occurrence_id
+obis1_wdpa = obis_wdpa %>%
+  group_by(occurrence_id) %>%
+  summarize(
+    wdpa_pids = paste(WDPA_PID, collapse=',')) # populate list of WDPA park ids
 
-o %>%
+# see Selig et al. - 2013 - Assessing Global Marine Biodiversity Status within a Coupled Socio-Ecological Perspective
+wts_status = c(LC=0, NT=0.2, VU=0.4, EN=0.6, CR=0.8, EX=1)
+
+d = obis_sf %>%
+  st_set_geometry(NULL) %>% # drop spatial
+  left_join(
+    obis1_wdpa,
+    by='occurrence_id') %>%
+  filter(
+    !is.na(status),
+    status %in% names(wts_status)) %>%
+  mutate(
+    wdpa_pids = ifelse(wdpa_pids=='NA', NA, wdpa_pids),  # weird 'NA', not NA
+    in_mpa    = ifelse(!is.na(wdpa_pids), TRUE, FALSE),
+    status_wt = wts_status[status]) %>%
+  group_by(
+    taxonomicgroup, in_mpa) %>%
+  summarise(
+    status_wt         = mean(status_wt), # NOTE: weighted by number of occurrences
+    n_scientificNames = length(unique(scientificName)),
+    n_occurrences     = n()) # %>% ungroup()
+d
+sum(d$n_occurrences)
+nrow(obis_sf)
+
+d_dif = d %>%
+  select(taxonomicgroup, in_mpa, status_wt) %>%
+  spread(in_mpa, status_wt) %>%
+  rename(
+    avg_status_wt_outside_mpa = `FALSE`,
+    avg_status_wt_inside_mpa = `TRUE`) %>%
+  mutate(
+    status_dif = avg_status_wt_outside_mpa - avg_status_wt_inside_mpa)
+# fully unprotected (out - in): 1   -   0 =  1
+# evenly  protected (out - in): 0.5 - 0.5 =  0
+# fully   protected (out - in): 0   -   1 = -1
+d_dif
+
+d_dif = d_dif %>%
+  filter(
+    !is.na(status_dif))
+
+wts_taxa = d %>%
   group_by(taxonomicgroup) %>%
-  summarize(n = n()) %>%
-  arrange(desc(n)) %>%
-  datatable() %>%
-    formatCurrency('n', currency='', digits=0) 
+  summarize(
+    n_scientificNames = sum(n_scientificNames)) %>% # NOTE: repeats in/out mpa
+  mutate(
+    wt = rescale(n_scientificNames))
+wts_taxa
 
-table(o$status, useNA = 'ifany')
-
-o %>%
-  #filter(status %in% c('NT','VU','EN','CR','EX')) %>% # skipping: <NA>,DD,LC
-  group_by(taxonomicgroup, status) %>%
-  summarize(n = n()) %>%
-  left_join(
-    o %>%
-      group_by(taxonomicgroup) %>%
-      summarize(n_taxonomicgroup = n()),
-    by='taxonomicgroup') %>%
-  arrange(desc(n_taxonomicgroup, n)) %>%  
-  datatable() %>%
-    formatCurrency(c('n','n_taxonomicgroup'), currency='', digits=0)
+weighted.mean(
+  x = d_dif$status_dif, 
+  w = setNames(
+    wts_taxa$wt,
+    wts_taxa$taxonomicgroup)[
+      d_dif$taxonomicgroup])
 ```
-
-
-
