--- a/technical/postgis.Rmd
+++ b/technical/postgis.Rmd
@@ -228,7 +228,7 @@ rinfo -ro -al $c$vrt ``
 ```
 
 
-# load shp into db
+## load EEZ, WDPA shp into db
 
 [shp2pgsql: Using the ESRI Shapefile Loader](http://postgis.net/docs/using_postgis_dbmanagement.html#shp2pgsql_usage)
 
@@ -240,6 +240,8 @@ cd /Users/bbest/github/mbon
 shp2pgsql -i -D -d -s 4269 -I ./data/World_EEZ_v9_20161021/eez.shp eez | psql -d mbon
 shp2pgsql -i -D -d -s 4269 -I ./data/WDPA_Dec2016-shapefile/WDPA_Dec2016-shapefile-polygons.shp wdpa | psql -d shipwrecks
 ```
+
+## Try `sf::st_write`
 
 ```bash
 brew install qscintilla2
@@ -259,8 +261,6 @@ st_write(ply, sprintf('PG:dbname=%s', db), obj, layer_options = 'OVERWRITE=true'
 
 # test if column is unique
 #select mrgid from eez group by mrgid having count(*) > 1;
-
-
 
 system.time({
   res = dbGetQuery(
