--- a/technical/postgis.Rmd
+++ b/technical/postgis.Rmd
@@ -183,7 +183,7 @@ install.packages("sf")
 
 Using [CSV Driver | GDAL.org](http://www.gdal.org/drv_csv.html):
 
-``
+```xml
 <OGRVRTDataSource>
     <OGRVRTLayer name="test">
         <SrcDataSource>test.csv</SrcDataSource>
@@ -192,8 +192,9 @@ Using [CSV Driver | GDAL.org](http://www.gdal.org/drv_csv.html):
         <GeometryField encoding="PointFromColumns" x="Longitude" y="Latitude"/>
     </OGRVRTLayer>
 </OGRVRTDataSource>
+```
 
-`ba``sh
+```bash
 csocc="/Users/bbest/github/obis-lat-time-fig/data/occurrences"
 csv="$occ.csv"
 vrt="$occ.vrt"
@@ -220,9 +221,10 @@ vi occurrences.vrt
 
 ```bash
 #ogrinfo -ro -al $csv X_POSSIBLE_NAMES=decimalLongitude Y_POSSIBLE_NAMES=decimalLatitude -oo KEEP_GEOM_COLUMNS=NO
-rinfo -ro -al $c$vrt `,`
+rinfo -ro -al $c$vrt
+```
 
-`` load EEZ, WDPA shp into db
+## load EEZ, WDPA shp into db
 
 [shp2pgsql: Using the ESRI Shapefile Loader](http://postgis.net/docs/using_postgis_dbmanagement.html#shp2pgsql_usage)
 
