--- a/technical/aquamaps_ingest.Rmd
+++ b/technical/aquamaps_ingest.Rmd
@@ -43,6 +43,7 @@ spp   <- read_csv(spp_csv) # head(occ)
 r_na <- raster(
   xmn = -180, xmx = 180, ymn = -90, ymx = 90, 
   resolution=0.5, crs=leaflet:::epsg4326)
+r_a <- area(r_na)
 ```
 
 ```{r helper functions}
@@ -132,19 +133,32 @@ $$
 {R_c} = \sum_{s=1}^{S} e_{s,c}
 $$
 
-This approach however gives equal weight for any given cell to a species with a contracted range as an expansive one. From a population perspective, this overrepresents the expansive range. To account for small areas with high degrees of unique endemism, we can "range normalize" by dividing the given relative environmental suitability for the species and cell ($e_{s,i}$) by the sum of the species relative environmental suitability ($E_s$) across all cells ($C$), i.e. the whole range:
+This approach however gives equal weight for any given cell to a species with a contracted range as an expansive one. From a population perspective, this overrepresents the expansive range. To account for small areas with high degrees of unique endemism, we can "range normalize" by dividing the given relative environmental suitability for the species and cell ($e_{s,i}$) by the sum of the species relative environmental suitability ($E_s$) across all cells ($C$), i.e. the whole range, and further account for cell area ($a_c$) and IUCN extinction risk as a species weight ($w_s$):
+
 
 $$
-E_s = \sum_{c=1}^{C} e_{s} \\
-{RN\ R_c} = \sum_{s=1}^{S} \frac{ e_{s,c} }{ E_s }
+E_s = \sum_{c=1}^{C} e_{s,c} * a_c \\
+{RN\ R_c} = \sum_{s=1}^{S} \frac{ e_{s,c} * a_c * w_s }{ E_s }
 $$
 
+- $a_c$: area of cell
+- $c$: cell
+- $e$: AquaMap's Relative Environmental Suitability (RES; ranging in value [0, 1]) 
+- $E_s$: total environmental suitability, per species
+- $R_c$: species richness, per cell
+- $RN R_c$: range normalized species richness, per cell
+- $s$: species
+- $S$: total number of species
+- $w_s$: IUCN extinction risk weight of species
+
+Note that the (IUCN extinction risk) weight ($w_s$) is not part of the range normalization denominator ($E_s$) so when summing species those with higher extinction risk are given more weight.
 
 
 ```{r range normalize}
 # species id's for right whale and blue whale
 sid_blue  <- "ITS-Mam-180528"
 sid_right <- "ITS-Mam-180537"
+
 # IUCN extinction risk status
 ext_blue  <- "EN"
 ext_right <- "CR"
@@ -152,36 +166,87 @@ ext_right <- "CR"
 # extinction risk weights
 # bumping up LC to 0.2 to give credit for presence and not expecting extinct 1.2
 ext_wts <- c(LC=0.2, NT=0.4, VU=0.6, EN=0.8, CR=1, EX=1.2)
+w_blue  <- ext_wts[ext_blue]
+w_right <- ext_wts[ext_right]
 
-get_am_raster <- function(sid, range_normalize=F, for_leaflet=T){
+get_am_raster <- function(sid, w=NULL, weight_area=T, range_normalize=T, attr_leaflet=T, extend_global=T){
   # Get AquaMaps raster
+  # TODO: threshold param for binary output
   # sid: species id # sid <- sid_right
+  # sid=sid_right; weight_area=T; range_normalize=T; attr_leaflet=T; extend_global=T; w=w_right
+  
+  # read tif
   tif <- glue("{dir_spp}/{sid}.tif")
   r <- raster(tif, crs=leaflet:::epsg4326)
+  
+  # set boundaries
   b <- extent(r)
   
-  if (range_normalize)
-    r <- r / sum(values(r), na.rm=T)
+  a = "attributes" # names(attributes(r)) # names(attributes(a))
+  attr(a, "bounds") <- list(lng1 = b@xmin, lat1 = b@ymin, lng2 = b@xmax, lat2 = b@ymax) 
 
-  # TODO: add r in geographic as attr()
-  r_gcs <- r
-  if (for_leaflet){
-    r <- projectRasterForLeaflet(r, method="ngb")
-    attr(r, "r_gcs") <- r_gcs 
+  # extend to global for calculations
+  r <- extend(r, r_na)
+  
+  attr(a, "cell_avg_e") = cellStats(r, "mean", na.rm=T)
+  attr(a, "sum_e") <- cellStats(r, stat='sum', na.rm=T)
+  
+  if (weight_area){
+    r <- r * r_a
+    
+    attr(a, "cell_avg_e_a") = cellStats(r, "mean", na.rm=T)
+    attr(a, "sum_area_km2")   <- cellStats(mask(r_a, r), stat='sum', na.rm=T)
+    attr(a, "sum_e_area_km2") <- cellStats(r, stat='sum', na.rm=T)
   }
   
-  # set bounds for use with leaflet::fitBounds() # , , , 
-  attr(r, "bounds") <- list(lng1 = b@xmin, lat1 = b@ymin, lng2 = b@xmax, lat2 = b@ymax) 
+  if (range_normalize){
+    E_s <- ifelse(weight_area, attr(a, "sum_e_area_km2"), attr(a, "sum_e"))
+    r <- r / E_s
+    
+    attr(a, "E_s") <- ifelse(weight_area, "sum_e_area_km2", "sum_e")
+    attr(a, "cell_avg_e_a_Es") = cellStats(r, "mean", na.rm=T)
+  }
+  
+  if (!is.null(w)){
+    r <- r * w
+    
+    attr(a, "w") <- w
+    attr(a, "cell_avg_w") = cellStats(r, "mean", na.rm=T)
+  }
+  
+  attr(a, "cell_avg") = cellStats(r, "mean", na.rm=T)
+  
+  if (attr_leaflet){
+    r_leaflet <- projectRasterForLeaflet(raster_trim(r), method="ngb")
+    attr(a, "r_leaflet") <- r_leaflet 
+  }
+  
+  if (!extend_global)
+    r <- raster_trim(r)
+
+  # append attributes  
+  walk(names(attributes(a)), function(x){
+    attr(r, x) <- attributes(a)[[x]]
+    assign("r", r, pos = parent.frame(n=2), inherits = FALSE)})
+  #names(attributes(a))
+  #names(attributes(r))
+  
   r
 }
 
 # rasters for species relative environmental suitability [0 - 1]
-r_right <-  get_am_raster(sid_right)
-r_blue  <-  get_am_raster(sid_blue) # plot(r_blue)
-#r_right_n <-  get_am_raster(sid_right, range_normalize=T)
-#r_blue_n  <-  get_am_raster(sid_blue, range_normalize=T)
+r_right <-  get_am_raster(sid_right, weight_area=F, range_normalize=F) # plot(r_right)
+r_blue  <-  get_am_raster(sid_blue, weight_area=F, range_normalize=F)   # plot(r_blue)
+r_right_w_a_r <-  get_am_raster(sid_right, w=w_right, weight_area=T, range_normalize=T) # plot(r_right)
+r_blue_w_a_r  <-  get_am_raster(sid_blue, w=w_blue, weight_area=T, range_normalize=T)   # plot(r_blue)
 
-add_am_rasters <- function(..., spp_wts=NULL, spp_range_normalize=T, spp_all_normalize=T){
+# names(attributes(r_right))
+# attr(r_blue, "cell_avg")
+# attr(r_right, "cell_avg")
+# attr(r_right, "sum_area_km2")
+
+sum_am_rasters <- function(..., attr_leaflet=T){
+#add_am_rasters <- function(..., spp_wts=NULL, spp_range_normalize=T, spp_all_normalize=T){
   # spp_range_normalize: for each species map, divide by sum of all pixels, before summing
   # spp_all_normalize: after summing all species maps, divide by max pixel value to get range [0,1]
   # spp_wts: species weights, to apply in same order as rasters. defaults to 1
@@ -189,28 +254,13 @@ add_am_rasters <- function(..., spp_wts=NULL, spp_range_normalize=T, spp_all_nor
   # ...: rasters
   
   rasters <- list(...)
+  s <- stack(rasters)
   
-  extend_r_gcs <- function(r, normalize){
-    r_gcs <- attr(r, "r_gcs")
-    
-    if (normalize)
-      r_gcs <- r_gcs / cellStats(r_gcs, stat='sum', na.rm=T)
-    
-    extend(r_gcs, r_na)
-  }
-  
-  # range normalize (if T) and extend (to stack) all input rasters
-  s <- stack(lapply(rasters, extend_r_gcs, spp_range_normalize))
-  #s0 <- stack(lapply(rasters, extend_r_gcs, F))
-  
-  #r1 <- raster(s, layer=1); plot(r1, col=rev(rainbow(255)))
-  #r2 <- raster(s, layer=2); plot(r2, col=rev(rainbow(255)))
-  
-  if (!is.null(spp_wts)){
-    stopifnot(length(rasters)==length(spp_wts))
-    for (i in 1:length(spp_wts))
-      s[[i]] <- raster(s, layer=i) *  spp_wts[i]
-  } #else {
+  # if (!is.null(spp_wts)){
+  #   stopifnot(length(rasters)==length(spp_wts))
+  #   for (i in 1:length(spp_wts))
+  #     s[[i]] <- raster(s, layer=i) *  spp_wts[i]
+  # } #else {
     #spp_wts = rep(1, length(rasters))
   #}
     
@@ -221,7 +271,8 @@ add_am_rasters <- function(..., spp_wts=NULL, spp_range_normalize=T, spp_all_nor
   
   # sum across all species rasters
   #r <- calc(s, function(x) )
-  r <- calc(s, fun = sum, na.rm = T)
+  #r <- calc(s, fun = sum, na.rm = T)
+  r <- sum(s, na.rm = T)
   #plot(raster(s, layer=1), col=rev(rainbow(255)))
   
   # mask
@@ -229,24 +280,27 @@ add_am_rasters <- function(..., spp_wts=NULL, spp_range_normalize=T, spp_all_nor
   r <- mask(r, m)
   
   # trim
-  r <- raster_trim(r)
+  #r <- 
   #summary(r); plot(r, col=rev(rainbow(255)))
   #summary(r0); plot(r0, col=rev(rainbow(255)))
   #summary(r0); plot(stack, r0)
   #r <- calc(s, fun = sum, na.rm = T)
   #summary(r0)
   
-  if (spp_all_normalize)
-    r <- r / cellStats(r, stat='max', na.rm=T)
+  # if (spp_all_normalize)
+  #   r <- r / cellStats(r, stat='max', na.rm=T)
   
   # project for leaflet
-  r <- projectRasterForLeaflet(r, method="ngb")
+  if (attr_leaflet)
+    attr(r, "r_leaflet")  <- projectRasterForLeaflet(raster_trim(r), method="ngb")
   
   r
 }
 
-r_sum   <- add_am_rasters(r_right, r_blue, spp_range_normalize=F, spp_all_normalize=F, spp_wts = NULL)
-r_nrsum <- add_am_rasters(r_right, r_blue, spp_range_normalize=T, spp_all_normalize=F, spp_wts = NULL)
+#r_sum   <- add_am_rasters(r_right, r_blue, spp_range_normalize=F, spp_all_normalize=F, spp_wts = NULL)
+#r_nrsum <- add_am_rasters(r_right, r_blue, spp_range_normalize=T, spp_all_normalize=F, spp_wts = NULL)
+r_sum   <- sum_am_rasters(r_right, r_blue) # plot(r_sum)
+r_nrsum <- sum_am_rasters(r_right_w_a_r, r_blue_w_a_r)
 
 #plot(r_sum)
 #plot(r_nrsum)
@@ -267,13 +321,14 @@ fit_am_raster <- function(map, r){
 add_am_raster <- function(m, r, lyr_name, r_type="spp"){
   # r_type="spp" or "sum"
   # r <- r_right
+  r <- attr(r, "r_leaflet")
   
   max_r <- cellStats(r, stat='max', na.rm=T)
   sum_r <- cellStats(r, stat='sum', na.rm=T)
 
   rng <- c(0, 1)
   if (r_type != "spp"){
-    rng <- c(0, cellStats(r, stat='max', na.rm=T))
+    rng <- c(0, max_r)
   }
   
   pal <- colorNumeric(
@@ -308,7 +363,7 @@ add_am_raster <- function(m, r, lyr_name, r_type="spp"){
       values = rng, labFormat = lab_sci,
       title = ifelse(
         r_type == "spp",
-        glue("{lyr_name} (RES, RN RES)<br>&nbsp;&nbsp;sum={format(sum_r, big.mark=',', digits=1, nsmall=1)}"),
+        glue("{lyr_name} (RES, E_s)<br>&nbsp;&nbsp;sum={format(sum_r, big.mark=',', digits=1, nsmall=1)}"),
         glue("{lyr_name} (max, 1)")))
 }
 
@@ -324,6 +379,7 @@ map_am_layer <- function(lyr){
     addLayersControl(
       baseGroups = c("ESRI Ocean Basemap"),
       overlayGroups = c("right whale", "blue whale", "sum", "sum RN"),
+      #overlayGroups = c("right whale", "blue whale", "sum"),
       options = layersControlOptions(collapsed = T)) %>%
     fit_am_raster(r_blue) %>%
     addMiniMap(position = "bottomleft", toggleDisplay = T, minimized = T) %>%
@@ -341,6 +397,19 @@ map_am_layer("sum")
 map_am_layer("sum RN")
 ```
 
+
+### Accounting for Area
+
+#### TODO: Remove Land Area
+
+```{r}
+# calculate area of raster cells (km2)
+r_a <- area(r_na)
+
+# summarize and plot
+summary(values(r_a))
+plot(r_a)
+```
 
 ## Research
 
